@@ -154,6 +154,7 @@ class MadkitKernel extends Agent {
 	private final HashMap<Long, LockerCondition> agentsSendingNetworkMessage = new HashMap<>();
     private volatile int maximumGlobalUploadSpeedInBytesPerSecond;
     private volatile int maximumGlobalDownloadSpeedInBytesPerSecond;
+    private volatile boolean hasSpeedLimitation;
 
 	// final private HashMap<String, ScheduledThreadPoolExecutor>
 	// dedicatedServiceExecutors=new HashMap<>();
@@ -416,6 +417,15 @@ class MadkitKernel extends Agent {
 		}
 	}
 
+	private void setHasSpeedLimitation()
+	{
+		hasSpeedLimitation=maximumGlobalUploadSpeedInBytesPerSecond!=Integer.MAX_VALUE || maximumGlobalDownloadSpeedInBytesPerSecond!=Integer.MAX_VALUE;
+	}
+
+	boolean hasSpeedLimitation(AbstractAgent requester) {
+		return hasSpeedLimitation;
+	}
+
 	@Override
 	protected void activate() {
 		// addWebRepository();
@@ -424,6 +434,7 @@ class MadkitKernel extends Agent {
 
         maximumGlobalDownloadSpeedInBytesPerSecond=Math.max(0, getMadkitConfig().networkProperties.maximumGlobalDownloadSpeedInBytesPerSecond);
         maximumGlobalUploadSpeedInBytesPerSecond=Math.max(0, getMadkitConfig().networkProperties.maximumGlobalUploadSpeedInBytesPerSecond);
+        setHasSpeedLimitation();
         createGroup(LocalCommunity.Groups.SYSTEM);
 		createGroup(LocalCommunity.Groups.KERNELS);
 
@@ -763,10 +774,11 @@ class MadkitKernel extends Agent {
 					args.append(s).append(" ");
 				}
 
-				Process p=Runtime.getRuntime().exec(// TODO not used yet
-						System.getProperty("java.home") + File.separatorChar + "bin" + File.separatorChar + "java -cp "
-								+ System.getProperty("java.class.path") + " "
-								+ platform.getConfigOption().madkitMainClass.getCanonicalName() + " " + args);
+
+				Process p=Runtime.getRuntime().exec(new String[]{
+						System.getProperty("java.home") + File.separatorChar + "bin" + File.separatorChar + "java"
+						," -cp "+System.getProperty("java.class.path") + " "+platform.getConfigOption().madkitMainClass.getCanonicalName(),
+						args.toString()});
 				Utils.flushAndDestroyProcess(p);
 			} catch (IOException e) {
 				bugReport(e);
@@ -1261,6 +1273,7 @@ class MadkitKernel extends Agent {
         if (max<=0)
             throw new IllegalArgumentException("max must be greater than zero !");
         maximumGlobalUploadSpeedInBytesPerSecond=max;
+		setHasSpeedLimitation();
     }
     @SuppressWarnings("unused")
     void setMaximumGlobalDownloadSpeedInBytesPerSecond(AbstractAgent requester, int max)
@@ -1268,6 +1281,7 @@ class MadkitKernel extends Agent {
         if (max<=0)
             throw new IllegalArgumentException("max must be greater than zero !");
         maximumGlobalDownloadSpeedInBytesPerSecond=max;
+		setHasSpeedLimitation();
     }
 
     @SuppressWarnings("unused")
